src/legends/modules/Home/components/UserDataSection/UserDataSection.module.scss
@import '@legends/styles/base.scss';

.wrapper {
  .headerWrapper {
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin-bottom: 2rem;

    .title {
      font-weight: 500;
      font-size: 2.5rem;
    }

    .seasonInfo {
      padding: 1rem 1.5rem;
      display: flex;
      align-items: center;
      gap: 2rem;
      background: $neutral-700;
      border-radius: $primaryBorderRadius;
      border: 0.0625rem solid rgba($neutral-600, 0.2);

      .info {
        display: flex;
        align-items: center;
        gap: 0.5rem;

        .value,
        .label {
          font-weight: 500;
          font-size: 1rem;
        }

        .label {
          color: $neutral-400;
        }
        .value {
          color: $whiteText;
        }
      }
    }
  }
  .panel {
    display: flex;
    gap: 1.75rem;
    margin-bottom: 5rem;

    .statsWrapper,
    .rewardsWrapper {
      border-radius: 1rem;
      background-color: $neutral-700;
      border: 0.0625rem solid rgba($neutral-600, 0.2);
    }

    .statsWrapper {
      padding: 1.25rem 1.5rem 1.5rem;
      flex: 1;
      height: fit-content;

      .header > span,
      .stat .header > div {
        &:nth-child(1) {
          flex-basis: 5rem;
        }
        &:nth-child(2) {
          flex: 1;
        }
        &:nth-child(3) {
          flex-basis: 4.5rem;
          text-align: right;
        }
        &:nth-child(4) {
          flex-basis: 2.5rem;
        }
      }

      .header {
        display: flex;
        width: 100%;
        align-items: center;
        min-height: 1.5rem;

        span {
          font-size: 0.8125rem;
          font-weight: 500;
          color: $neutral-450;
        }
      }
      .statSkeleton {
        width: 100%;
        height: 3.5rem;
        border-radius: 0.5rem;
        background-color: rgba($neutral-600, 0.2);
        margin-bottom: 1rem;

        &:first-child {
          margin-top: 0.5rem;
        }
      }
      .stat {
        padding-top: 1rem;

        &.open {
          .header {
            margin-bottom: 0.5rem;
          }
          .description {
            max-height: 30rem;
            transition: max-height 0.3s ease-in-out, opacity 0.2s ease-in-out;
            padding: 0.5rem;
            opacity: 1;
          }
          .chevronIcon {
            transform: rotate(180deg);
          }
        }

        &:not(:last-child) {
          padding-bottom: 1rem;
          border-bottom: 2px solid rgba($neutral-600, 0.2);
        }
        .header {
          display: flex;
          align-items: center;

          .score {
            .scoreBadge {
              display: flex;
              width: fit-content;
              align-items: center;
              justify-content: center;
              padding: 0 0.75rem;
              min-width: 3.5rem;
              height: 2rem;
              text-align: center;
              background-color: $blackText;
              border-radius: 1.25rem;

              .scoreText {
                font-weight: 600;
                font-size: 1rem;
                letter-spacing: 0;
                color: transparent;
                background: linear-gradient(27.42deg, #00d5ff 19.16%, #a25aff 74.07%);
                background-clip: text;
              }
            }
          }
          .criteria .label,
          .value {
            font-size: 13px;
            font-weight: 400;
            line-height: 1.5rem;
            color: $whiteText;
          }
          .criteria {
            display: flex;
            align-items: center;
            text-align: left;
            justify-content: flex-start;

            .icon {
              margin-right: 0.5rem;
            }
            .infoIcon {
              color: $quaternaryText;
              font-size: 0.75rem;
              margin-left: 0.5rem;
            }
          }

          .chevronIcon {
            margin-left: 1.5rem;
            color: $quaternaryText;
            width: 1rem;
            transition: transform 0.2s ease-in-out;
          }
        }
        .description {
          font-size: 0.75rem;
          line-height: 1.1875rem;
          color: $secondaryText;
          max-height: 0;
          padding: 0;
          overflow: hidden;
          opacity: 0;
          white-space: pre-wrap;
        }
      }
    }
    .rewardsWrapper {
      display: flex;
      flex-direction: column;
      max-width: 20rem;
      width: 100%;
      padding: 1rem;

      .total,
      .wallet,
      .rank {
        width: 100%;
        display: flex;
        position: relative;

        .content {
          flex: 1;
          position: relative;
          display: flex;
          flex-direction: column;
          align-items: center;
          justify-content: center;
          text-align: center;
          z-index: 2;

          .label {
            font-size: 0.75rem;
            line-height: 1rem;
            color: #e9ebf8;
            font-weight: 600;
          }
        }

        .background {
          position: absolute;
          top: 0;
          left: 0;
          width: 100%;
          height: 100%;
          border-radius: $primaryBorderRadius;
        }

        .chevron {
          position: absolute;
          bottom: -1rem;
          left: 50%;
          transform: translateX(-50%);
          width: 1.5rem;
          height: auto;
        }
      }

      .total {
        height: 10.1875rem;

        .value {
          font-size: 2.75rem;
          font-weight: 700;
          color: transparent;
          background: linear-gradient(31.59deg, #00d5ff 21.36%, #a25aff 88.85%);
          background-clip: text;
          margin-bottom: 0.25rem;
        }
      }

      .wallet {
        z-index: 2;
        transform: translateY(0.75rem);
        height: 11.75rem;

        .kicker {
          font-size: 0.625rem;
          line-height: 1rem;
          margin-bottom: 0.5rem;
          color: $secondaryText;
        }
        .value {
          font-size: 2rem;
          color: $whiteText;
          margin-bottom: 0.75rem;
        }
        .usd {
          font-size: 0.875rem;
          color: $blue-400;
          font-weight: 600;
          margin-bottom: 0.5rem;
        }
      }

      .rank {
        border-radius: 1rem;
        height: 10.625rem;
        width: 100%;

        .badge {
          background: #00000052;
          border-radius: 1rem;
          width: 4.25rem;
          height: 1.5rem;
          margin-bottom: 0.5rem;
          display: flex;
          align-items: center;
          justify-content: center;
          color: $purple-550;
          font-size: 1rem;
          font-weight: 500;
        }

        .labelWithIcon {
          display: flex;
          align-items: center;

          .icon {
            color: rgba($neutral-600, 0.64);
            font-size: 0.75rem;
            margin-right: 0.375rem;
          }
        }
      }
    }
  }
}

